kyverno/policies/enforce-readonly-rootfs.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-readonly-rootfs
spec:
  validationFailureAction: enforce
  rules:
    - name: readonly-rootfs
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Read-only root filesystem must be used."
        pattern:
          spec:
            containers:
              - securityContext:
                  readOnlyRootFilesystem: true
